# miso-graphql

./: LICENSE  README.md  cabal.project  flake.nix  miso-graphql.cabal
.github/workflows/: main.yml
example/: Main.hs  schema.gql
src/Miso/GraphQL/: AST.hs  Class.hs  JSON.hs  Lexer.hs  Parser.hs  Printer.hs  Selector.hs  TH.hs
test/: Arbitrary.hs  Main.hs  RoundtripSpec.hs
